# ton-connect-bot

./: Makefile  README.md  docker-compose.yml
bot/: Dockerfile  pyproject.toml
bot/src/: main.py
bot/src/handlers/: __init__.py
bot/src/handlers/user_interaction_handlers/: __init__.py  start.py
bot/src/utils/: __init__.py  register_handlers.py  start_bot.py
config/: pytonconnect-manifest.json
