[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["maksimzhohov <zhohovmaksim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.6.0"
pytoniq-core = "^0.1.35"
pytonconnect = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
